<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SoulMatch</string>
    <string name="default_web_client_id">
    866849119509-5dqk687ddecnk9iqakilsrdb8em3roas.apps.googleusercontent.com
</string>


    <string-array name="languages">
        <item>English</item>
        <item>isiXhosa</item>
        <item>isiZulu</item>
    </string-array>

    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="find_soulmate">Find Your Soulmate</string>
    <string name="saved_profiles">Saved Profiles</string>
    <string name="notifications">Notifications</string>
    <string name="love_quote">Love Quote</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="app_language">App Language</string>
    <string name="enable_dark_theme">Enable or disable dark mode</string>
    <string name="choose_language">Choose your preferred language</string>
    <string name="dashboard_title">SoulMatch Dashboard</string>
    <string name="loading_quote">Loading love quote</string>
    <string name="quote_error">Could not load love quote</string>
    <string name="network_error">Network error</string>
    <string name="unknown_author">Unknown author</string>
    <string name="refresh_quote">Refresh quote</string>
    <string name="app_settings">App Settings</string>
</resources>
